--- a/roles/certbot/templates/etc/init/systemd/overwrite.conf.j2
+++ b/roles/certbot/templates/etc/init/systemd/overwrite.conf.j2
@@ -3,6 +3,6 @@
 
 [Service]
 ExecStart        =
-ExecStart        = /bin/multidomain-certbot-renew.py
+ExecStart        = /bin/certbot-renew.py
 
-SyslogIdentifier = multidomain-certbot-renew
+SyslogIdentifier = certbot-renew
